--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,30 @@
 name: Check
+
 on: push
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-        - name: CheckOut
-          uses: actions/checkout@v4
-        - name: Install
-          run: npm ci
-        - name: Lint check
-          run: npm run lint
+      - name: CheckOut
+        uses: actions/checkout@v4
+
+      - name: Install
+        run: npm ci
+
+      - name: Lint check
+        run: npm run lint
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: CheckOut
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Test Check
+        env:
+          PORT: ${{ secrets.PORT }}
+        run: npm run test
