--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,16 @@ jobs:
 
   test:
     needs: [lint]
+    strategy:
+        matrix: 
+          version: [20, 18, 22]
     runs-on: ubuntu-latest
     steps:
       - name: CheckOut
         uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+            node-version: ${{matrix.version}}
 
       - name: Install dependencies
         run: npm ci
