--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on:  self-hosted
     steps:
       - name: CheckOut
         uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
     strategy:
         matrix: 
           version: [20, 18, 22]
-    runs-on: ubuntu-latest
+    runs-on:  self-hosted
     steps:
       - name: CheckOut
         uses: actions/checkout@v4
