--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: Deploy to VPS (abdulaziz)
+
 on:
   push:
     branches:
       - master
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,23 +15,24 @@ jobs:
       - name: SSH kalitini sozlash
         run: |
           mkdir -p ~/.ssh
-          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
         shell: bash
+
       - name: Serverga deploy qilish
         env:
-          HOST: ${{ secrets.HOST}}
-          USER: ${{ secrets.USERNAME}}
+          HOST: ${{ secrets.HOST }}
+          USER: ${{ secrets.USERNAME }}
           APP_DIR: /ci_cd_abdulaziz
-          PORT: ${{secrets.PORT}}
+          PORT: ${{ secrets.PORT }}
         run: |
-          ssh-keycan -H $HOST >> ~/.ssh/known_hosts
-          ssh $USER@HOST "
-            if [ ! -d $APP_DIR]; then
+          ssh-keyscan -H $HOST >> ~/.ssh/known_hosts
+          ssh $USER@$HOST <<EOF
+            if [ ! -d $APP_DIR ]; then
               mkdir -p $APP_DIR
               git clone https://github.com/paffexe/github_ci_cd.git $APP_DIR
               cd $APP_DIR
-              echo 'PORT=${PORT}' > .env
+              echo "PORT=${PORT}" > .env
             else
               cd $APP_DIR
               git pull origin master
@@ -37,5 +40,5 @@ jobs:
             npm install
             npm run build
             pm2 restart ci_cd_app_abdulaziz || pm2 start dist/main.js --name ci_cd_app_abdulaziz
-          "
+          EOF
         shell: bash
